--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
   </head>
   <body class="bg-light mt-5">
 
-    <div id="app" class="text-center">
+    <div id="app" class="text-center mb-3">
       <h3>{{ quote }}</h3>
     </div>
 
